@@ -1,8 +1,8 @@
 v1.1
 	use plchanges (pl id?) to keep track of the playlist (faster?)
 	speed up sorting by manipulating self.songs, self.currentdata appropriately?
-	VA albums
 	remove egg code... :(
+	test filterbar on slower laptop..
 
 v1.2
 	switching between user profiles?
